# hexgame

./: Board.cc  Board.h  CMakeLists.txt  ConsoleUi.cc  ConsoleUi.h  HexGame.cc  HexGame.h  Player.h  PlayerComputer.cc  PlayerComputer.h  PlayerHuman.cc  PlayerHuman.h  README.md  Test.cc  Test.h  Ui.h  bad_computer_move.txt  main.cc
